test_scores/negative_dimers/features/Q5XPI4.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q5XPI4.pkl.xz